--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,10 +7,14 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
     build:
         runs-on: ubuntu-latest
+        permissions:
+            contents: 'read'
+            id-token: 'write'
         steps:
             - name: Checkout
               uses: actions/checkout@v2
