--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,14 @@ jobs:
               with:
                 workload_identity_provider: 'projects/495615477282/locations/global/workloadIdentityPools/mosq-center-id-pool/providers/mosq-center-pool-provider'
                 service_account: 'pipeline@mosq-center.iam.gserviceaccount.com'
+            - name: Bump version and push tag
+              id: tag_version
+              uses: mathieudutour/github-tag-action@v6.1
+              with:
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                tag_prefix: 'v'
+                append_to_pre_release_tag: 'rc'
+                release_branches: 'main'
             - name: Build and Publish Docker Image
               id: build_docker_image
               uses: docker/build-push-action@v2
@@ -31,4 +39,4 @@ jobs:
                 context: .
                 file: ./Dockerfile
                 push: true
-                tags: mosq-center:latest
+                tags: ${{ steps.tag_version.outputs.new_tag }}
