--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,9 +12,7 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-        permissions:
-            contents: 'read'
-            id-token: 'write'
+        permissions: 'write-all'
         steps:
             - name: Checkout
               uses: actions/checkout@v2
