--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,27 +9,29 @@ on:
       - main
   workflow_dispatch:
 
+env:
+    GOOGLE_ARTIFACT_REGISTRY: europe-west1-docker.pkg.dev
 jobs:
     build:
         runs-on: ubuntu-latest
         permissions: 'write-all'
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v4
             - name: Authenticate with Google Cloud
               id: auth
               uses: google-github-actions/auth@v0.4.0
               with:
                 workload_identity_provider: 'projects/495615477282/locations/global/workloadIdentityPools/mosq-center-id-pool/providers/mosq-center-pool-provider'
                 service_account: 'pipeline@mosq-center.iam.gserviceaccount.com'
-            - name: Bump version and push tag
-              id: tag_version
-              uses: mathieudutour/github-tag-action@v6.1
+            - name: Create artifact path output
+              id: output_artifact
+              run: echo '::set-output name=artifact_path::${{ env.GOOGLE_ARTIFACT_REGISTRY }}/mosq-center/mosq-center-docker/mosq-center'
+            - name: Extract metadata (tags, labels) for Google Docker
+              id: meta
+              uses: docker/metadata-action@v5
               with:
-                github_token: ${{ secrets.GITHUB_TOKEN }}
-                tag_prefix: 'v'
-                append_to_pre_release_tag: 'rc'
-                release_branches: 'main'
+                images: ${{ steps.output_artifact.outputs.artifact_path }}
             - name: Build and Publish Docker Image
               id: build_docker_image
               uses: docker/build-push-action@v2
@@ -37,4 +39,4 @@ jobs:
                 context: .
                 file: ./Dockerfile
                 push: true
-                tags: ${{ steps.tag_version.outputs.new_tag }}
+                tags: ${{ steps.meta.outputs.tags }}
