--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,8 +22,16 @@ jobs:
               id: auth
               uses: google-github-actions/auth@v0.4.0
               with:
+                token_format: access_token
                 workload_identity_provider: 'projects/495615477282/locations/global/workloadIdentityPools/mosq-center-id-pool/providers/mosq-center-pool-provider'
                 service_account: 'pipeline@mosq-center.iam.gserviceaccount.com'
+            - name: Login to GAR
+              id: docker_login
+              uses: docker/login-action@v3
+              with:
+                registry: ${{ env.GOOGLE_ARTIFACT_REGISTRY }}
+                username: oauth2accesstoken
+                password: ${{ steps.auth.outputs.access_token }}
             - name: Create artifact path output
               id: output_artifact
               run: echo '::set-output name=artifact_path::${{ env.GOOGLE_ARTIFACT_REGISTRY }}/mosq-center/mosq-center-docker/mosq-center'
