--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -22,6 +22,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Authenticate with Google Cloud
+        id: auth
+        uses: google-github-actions/auth@v0.4.0
+        with:
+            token_format: access_token
+            workload_identity_provider: 'projects/495615477282/locations/global/workloadIdentityPools/mosq-center-id-pool/providers/mosq-center-pool-provider'
+            service_account: 'pipeline@mosq-center.iam.gserviceaccount.com'
       - name: Get terraform version from file
         id: get_terraform_version
         run: echo "version=$(cat .terraform-version)" >> $GITHUB_OUTPUT
