--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -19,6 +19,7 @@ jobs:
       run:
         shell: bash
         working-directory: infrastructure/gcp/
+    permissions: 'write-all'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
