--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -44,4 +44,5 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -input=false
       - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         run: terraform apply -auto-approve -input=false
