--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,7 @@ jobs:
                 token_format: access_token
                 workload_identity_provider: 'projects/495615477282/locations/global/workloadIdentityPools/mosq-center-id-pool/providers/mosq-center-pool-provider'
                 service_account: 'pipeline@mosq-center.iam.gserviceaccount.com'
-            - name: Login to GAR
+            - name: Login to Google Artifacts Registry
               id: docker_login
               uses: docker/login-action@v3
               with:
